[package]
name = "bevy-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"

# Accuracy spread images
image = "0.24.2"
imageproc = "0.23.0"

# Misc
lazy_static = "1.4.0"
bevy_prototype_lyon = "0.6.0"
itertools = "0.10.3"
rand = "0.8.5"
rand_distr = "0.4.3"

# Map loading
serde = "1.0.143"
serde_json = "1.0.83"

log = "0.4.17"